<resources>
    <string name="app_name">Lab7</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button!</string>
    <string name="login">Login</string>
    <string name="loginName">Login Name</string>
    <string name="password">Password</string>
    <string name="switchbut">What does this do?</string>
    <string name="radio">RadioButton</string>
    <string name="checkbox">Accept Image</string>
    <string name="dialog_title">Question</string>
    <string name="dialog_message">Would you like to close this activity?</string>
    <string name="ok">ok</string>
    <string name="cancel">cencel</string>
    <string name="btnStartChat">Start Chat</string>
    <string name="btnSendChat">Send</string>
    <string name="btnWeather">Weather</string>
    <string name="currentT">Current Temperature:</string>
    <string name="minT">Min Temperature:</string>
    <string name="maxT">Max Temperature</string>
    <string name="showMsg">Show Message</string>
    <string name="showMsgID">Show Message ID</string>
    <string name="deleteMsg">Delete Message</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="toolbar_dialog">New Message</string>
    <string name="snackbarMessage">You selected item 1.</string>
    <string name="toolbarDialogMessage">Do you want to go back?</string>

</resources>
