<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"  />

    <Button
        android:id="@+id/iAmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="clickHandler"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStartChat"
        android:onClick= "startChat"/>

    <Button
        android:id="@+id/buttonWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnWeather"
        android:onClick= "startWeather"/>

</LinearLayout>