<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecast">

    <ImageView
        android:id="@+id/imageWeather"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:visibility="visible" />


    <TextView
        android:id="@+id/currentT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/currentT" />

    <TextView
        android:id="@+id/minT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/minT" />

    <TextView
        android:id="@+id/maxT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:layout_marginStart="20dp"
        android:text="@string/maxT" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="223dp"
        android:visibility="invisible"
        android:layout_toEndOf="@+id/currentT" />


</RelativeLayout>